# newsletter

./: .dockerignore  Cargo.toml  Dockerfile  README.md  api.http  config.yaml  docker-compose.yaml
.github/workflows/: main.yml
migrations/: 20250912090453_create_subscriptions_table.sql  20250924034011_make_status_not_null_in_subscriptions.sql  20250924034021_create_subscription_tokens_table.sql
src/: config.rs  email_client.rs  lib.rs  main.rs  startup.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health.rs  main.rs
tests/api/: health.rs  helpers.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
