[package]
name = "newsletter"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "newsletter"
path = "src/main.rs"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
config = { version = "0.15.15", default-features = false, features = ["yaml"] }
sqlx = { version = "0.8.6", default-features = false, features = [
  "chrono",
  "macros",
  "migrate",
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
] }
uuid = { version = "1.18.1", features = ["v7"] }
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
secrecy = { version = "0.10.3", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["registry", "env-filter"] }
tower-http = { version = "0.6.6", features = ["request-id", "trace"] }
tower = "0.5.2"

[dev-dependencies]
reqwest = { version = "0.12.23", features = ["json"] }
testcontainers = "0.25.0"
testcontainers-modules = { version = "0.13.0", features = ["postgres"] }
