[package]
name = "newsletter"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "newsletter"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
config = { version = "0.15.15", default-features = false, features = ["yaml"] }
rand = { version = "0.9.2", features = ["std_rng"] }
regex = "1.11.2"
reqwest = { version = "0.12.23", default-features = false, features = [
  "json",
  "rustls-tls",
] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", default-features = false, features = [
  "chrono",
  "macros",
  "migrate",
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["request-id", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [
  "registry",
  "env-filter",
] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.18.1", features = ["v7"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
claims = "0.8.0"
fake = "4.4.0"
linkify = "0.10.0"
serde_json = "1.0.145"
testcontainers = "0.25.0"
testcontainers-modules = { version = "0.13.0", features = ["postgres"] }
wiremock = "0.6.5"
